src/argocd/bootstrap-resources/budget/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget
  labels:
    app.kubernetes.io/name: budget
spec:
  replicas: 1
  revisionHistoryLimit: 0 
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: budget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: budget
    spec:
      containers:
      - name: budget
        image: docker.io/actualbudget/actual-server:24.11.0
        ports:
          - containerPort: 5006
            name: http
            protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: budget-data-pvc
