src/argocd/bootstrap-resources/budget/services.yml
apiVersion: v1
kind: Service
metadata:
  name: budget
spec:
  selector:
    app.kubernetes.io/name: budget
  ports:
  - name: http
    protocol: TCP
    port: 5006
    targetPort: http
