src/argocd/bootstrap-resources/budget/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.ryanb.tv`)
      kind: Rule
      services:
        - name: budget
          kind: Service
          port: http
  tls: {}
